# cloud-data-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: sobre_pasta.md
.github/workflows/: ci.yml
config/: sobre_pasta.md
docs/: ADR-001-python-version.md  architecture.md
src/: main.py  sobre_pasta.md
src/utils/: mensagem.py
tests/: sobre_pasta.md  test_main.py
